org.mmisw.iserver - ORR Client Library ("interface to the server")
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13
$Id$

2010-08-04
	Issue #133 "allow to do narrower-than hierarquies trees with indentation simple files"
	
	Now also processing indentation. The resulting SKOS file below passes the validation
	at http://demo.semantic-web.at:8080/SkosServices/index
	The only warning is:
		Missing Language Tags: Found 9 occurrences of prefLabel without language tag.
		Handles missing language tags of all sorts of SKOS labels and textual content.
	TODO which is expected as no language tags are yet incorporated in the process.
	
	The example input is now (see resource/voc2skos-example.csv):
		-----------------------------------------------------------------------------------
		ontologyURI = "http://example.org/myont"
		class = "Foo"

		skos:prefLabel = "My preferred label for Foo"
		skos:definition = "This is a demo skos:definition for concept Foo"
		
		indent.string = "  "
		indent.property = skos:narrower
		
		separator = ","    
		
		ID             ,skos:prefLabel ,skos:definition           ,myProperty 
		conceptA       ,concept A      ,concept A definition      ,my value for concept A
		  conceptA1    ,concept A1     ,concept A1 definition     ,my value for concept A1
		    conceptA1a ,concept A1a    ,concept A1a definition    ,my value for concept A1a
		    conceptA1b ,concept A1b    ,concept A1b definition    ,my value for concept A1b
		  conceptA2    ,concept A2     ,concept A2 definition     ,my value for concept A2
		conceptB       ,concept B      ,concept B definition      ,my value for concept B
		  conceptB1    ,concept B1     ,concept B1 definition     ,my value for concept B1
		conceptC       ,concept C      ,concept C definition      ,my value for concept C
		-----------------------------------------------------------------------------------
	
	The output is in resource/voc2skos-example.rdf
	