@@ -1,0 +1,33 @@
+<?xml version="1.0"?>
+<rdf:RDF
+    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+    xmlns="http://example.org/"
+    xmlns:owl="http://www.w3.org/2002/07/owl#"
+    xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
+    xmlns:skos="http://www.w3.org/2004/02/skos/core#"
+    xml:base="http://example.org/">
+    <rdfs:Class rdf:about="http://www.w3.org/2004/02/skos/core#Concept"/>
+    <owl:Class rdf:about="UnnamedConcept">
+        <rdfs:subClassOf rdf:resource="http://www.w3.org/2004/02/skos/core#Concept"/>
+    </owl:Class>
+    <owl:DatatypeProperty rdf:about="myProperty">
+        <rdfs:label>myProperty</rdfs:label>
+        <rdfs:range rdf:resource="http://www.w3.org/2001/XMLSchema#string"/>
+        <rdfs:domain rdf:resource="UnnamedConcept"/>
+    </owl:DatatypeProperty>
+    <UnnamedConcept rdf:about="conceptB">
+        <myProperty>my value for concept B, with commas.</myProperty>
+        <skos:definition>concept B definition</skos:definition>
+        <skos:prefLabel>concept B</skos:prefLabel>
+    </UnnamedConcept>
+    <UnnamedConcept rdf:about="conceptC">
+        <myProperty>my value for concept C</myProperty>
+        <skos:definition>concept C definition</skos:definition>
+        <skos:prefLabel>concept C</skos:prefLabel>
+    </UnnamedConcept>
+    <UnnamedConcept rdf:about="conceptA">
+        <myProperty>my value for concept A</myProperty>
+        <skos:definition>concept A definition</skos:definition>
+        <skos:prefLabel>concept A</skos:prefLabel>
+    </UnnamedConcept>
+</rdf:RDF>
