@@ -1,4 +1,4 @@
-package org.mmisw.iserver.core.util;
+package org.mmisw.iserver.core.voc2skos;
 
 import java.io.File;
 import java.io.FileOutputStream;
@@ -17,6 +17,7 @@ import java.util.regex.Pattern;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.mmisw.iserver.core.util.Skos;
 import org.mmisw.iserver.core.util.csv.BaseParser;
 import org.mmisw.ont.JenaUtil2;
 
@@ -36,43 +37,45 @@ import com.hp.hpl.jena.vocabulary.RDFS;
 public class Voc2Skos {
 
 	/**
-	 * Reads an ontology from a text file in the format
-	 * specified in issue #133.
+	 * Reads a model from a text file in the format specified in issue #133, and
+	 * returns it as an OntModel.
 	 * 
 	 * @param file
 	 * @return
 	 * @throws IOException
 	 */
-	public static OntModel loadModel(File file) throws IOException {
-		Voc2Skos v2s = new Voc2Skos(file);
-		v2s.convert();
-		// wrap it in an OntModel and return it:
+	public static OntModel loadOntModel(File file) throws IOException {
+		Model model = loadModel(file);
 		OntModel ontModel = ModelFactory.createOntologyModel();
-		ontModel.add(v2s.model);
-		ontModel.setNsPrefixes(v2s.model);
+		ontModel.add(model);
+		ontModel.setNsPrefixes(model);
 		return ontModel;
 	}
 	
 	/**
-	 * Just a quick way to write the base model, which was the actual model
-	 * generated. We had to wrap it in an OntModel to comply with the outside
-	 * code that mainly handles OntModel's.
+	 * Reads a model from a text file in the format specified in issue #133.
 	 * 
-	 * <p>
-	 * NOTE: This method should be called with a model generated by {@link #loadModel(File)}.
+	 * @param file
+	 * @return
+	 * @throws IOException
+	 */
+	public static Model loadModel(File file) throws IOException {
+		Voc2Skos v2s = new Voc2Skos(file);
+		v2s._convert();
+		return v2s.model;
+	}
+	
+	/**
+	 * Saves a model in RDF/XML format.
 	 * 
-	 * @param ontModel  model generated by {@link #loadModel(File)}.
+	 * @param model  the model.
 	 * @param file
 	 * @param base
 	 * @throws IOException
 	 */
-	public static void saveOntModelXML(OntModel ontModel, File file,
+	public static void saveModelXML(Model model, File file,
 			String base) throws IOException {
 
-		// extract the actual model generated.
-		Model model = ontModel.getBaseModel();
-//		Model model = ontModel;   // See note below.
-		
 		String xmlbase = null;
 		String namespace = null;
 		
@@ -84,7 +87,6 @@ public class Voc2Skos {
 		FileOutputStream out = new FileOutputStream(file);
 		
 		try {
-			// NOTE When model is OntModel, the following generates a bunch of stuff
 			RDFWriter writer = model.getWriter("RDF/XML-ABBREV");
 			writer.setProperty("showXmlDeclaration", "true");
 			writer.setProperty("relativeURIs", "same-document,relative");
@@ -100,6 +102,34 @@ public class Voc2Skos {
 		finally {
 			IOUtils.closeQuietly(out);
 		}
+	}
+
+
+	/**
+	 * Just a quick way to write the base model of the given OntModel. This base model
+	 * was the actual model generated. We had to wrap it in an OntModel to comply with the outside
+	 * code that mainly handles OntModel's.
+	 * 
+	 * <p>
+	 * NOTE: This method should be called with a model generated by {@link #loadOntModel(File)}.
+	 * 
+	 * @param ontModel  model generated by {@link #loadOntModel(File)}.
+	 * @param file
+	 * @param base
+	 * @throws IOException
+	 */
+	public static void saveOntModelXML(OntModel ontModel, File file,String base) throws IOException {
+
+		// extract the actual model generated.
+		Model model = ontModel.getBaseModel();
+		
+		saveModelXML(model, file, base);
+		
+		// If we passed the given ontModel, ie., make the call
+		//    saveModelXML(ontModel, file, base);
+		// instead, the output file would contain a bunch of stuff related with the fact
+		// it's an ontology (as opposed to a more basic RDF model).
+
 	}
 
 	
@@ -192,17 +222,17 @@ public class Voc2Skos {
 		workParams = new LinkedHashMap<String,String>();
 	}
 	
-	private void convert() throws IOException {
-		_debug("convert: start");
+	private void _convert() throws IOException {
+		_debug("_convert: start");
 		try {
-			doConvert();
+			_doConvert();
 		}
 		finally {
 			parser.close();
 		}
 	}
 	
-	private void doConvert() throws IOException {
+	private void _doConvert() throws IOException {
 		_setDefaultWorkParams();
 		
 		_parsePreamble();
@@ -464,21 +494,12 @@ public class Voc2Skos {
 		if ( log.isDebugEnabled() ) {
 			log.debug(msg);
 		}
-		System.out.println("!!!! " +msg);
+//		System.out.println("!!!! " +msg);
 	}
 
 	private Resource _createConcept(String uri) {
 		Resource concept = model.createResource(uri, conceptSubClass);
 		numConcepts++;
 		return concept;
-	}
-
-	
-	public static void main(String[] args) throws IOException {
-		File file = new File("resource/voc2skos-example.csv");
-		OntModel model = loadModel(file);
-		File fileOut = new File("resource/voc2skos-example.rdf");
-		String base = model.getNsPrefixURI("");
-		Voc2Skos.saveOntModelXML(model, fileOut, base);
 	}
 }
